--- a/8_class/pyproject.toml
+++ b/8_class/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.11"
 pandera = "^0.22.1"
 pandas = "^2.2.3"
 fastparquet = "^2024.11.0"
+loguru = "^0.7.3"
+tenacity = "^9.0.0"
 
 
 [build-system]
